// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rmrk2.0.0 Consolidator: DESTROY Should DESTROY a Collection 1`] = `
{
  "bases": {},
  "collections": {},
  "invalid": [],
  "nfts": {
    "3-d43593c715a56da27d-KANARIABIRDS-KANR-00000777": {
      "block": 3,
      "burned": "true",
      "changes": [
        {
          "block": 4,
          "caller": "HNZata7iMYWmk5RvZRTiAsSDhV8366zq2YGb3tLH5Upf74F",
          "field": "burned",
          "new": "true",
          "old": "",
          "opType": "BURN",
        },
        {
          "block": 4,
          "caller": "HNZata7iMYWmk5RvZRTiAsSDhV8366zq2YGb3tLH5Upf74F",
          "field": "forsale",
          "new": 0n,
          "old": 0n,
          "opType": "BURN",
        },
      ],
      "children": [],
      "collection": "d43593c715a56da27d-KANARIABIRDS",
      "equipped": "",
      "forsale": 0n,
      "id": "3-d43593c715a56da27d-KANARIABIRDS-KANR-00000777",
      "metadata": undefined,
      "owner": "HNZata7iMYWmk5RvZRTiAsSDhV8366zq2YGb3tLH5Upf74F",
      "pending": false,
      "priority": [],
      "properties": {},
      "reactions": {},
      "resources": [],
      "rootowner": "HNZata7iMYWmk5RvZRTiAsSDhV8366zq2YGb3tLH5Upf74F",
      "sn": "00000777",
      "symbol": "KANR",
      "transferable": 1,
    },
  },
}
`;

exports[`rmrk2.0.0 Consolidator: DESTROY Should not DESTROY a Collection if it has unburned nft 1`] = `
{
  "bases": {},
  "collections": {
    "d43593c715a56da27d-KANARIABIRDS": Collection {
      "block": 2,
      "changes": [],
      "count": 1,
      "id": "d43593c715a56da27d-KANARIABIRDS",
      "issuer": "HNZata7iMYWmk5RvZRTiAsSDhV8366zq2YGb3tLH5Upf74F",
      "max": 0,
      "metadata": "https://some.url",
      "symbol": "KANARIABIRDS",
    },
  },
  "invalid": [
    {
      "block": 4,
      "caller": "HNZata7iMYWmk5RvZRTiAsSDhV8366zq2YGb3tLH5Upf74F",
      "message": "[DESTROY] Collection with unburned nfts cannot be destroyed d43593c715a56da27d-KANARIABIRDS",
      "object_id": "d43593c715a56da27d-KANARIABIRDS",
      "op_type": "DESTROY",
    },
  ],
  "nfts": {
    "3-d43593c715a56da27d-KANARIABIRDS-KANR-00000777": {
      "block": 3,
      "burned": "",
      "changes": [],
      "children": [],
      "collection": "d43593c715a56da27d-KANARIABIRDS",
      "forsale": 0n,
      "id": "3-d43593c715a56da27d-KANARIABIRDS-KANR-00000777",
      "metadata": undefined,
      "owner": "HNZata7iMYWmk5RvZRTiAsSDhV8366zq2YGb3tLH5Upf74F",
      "pending": false,
      "priority": [],
      "properties": {},
      "reactions": {},
      "resources": [],
      "rootowner": "HNZata7iMYWmk5RvZRTiAsSDhV8366zq2YGb3tLH5Upf74F",
      "sn": "00000777",
      "symbol": "KANR",
      "transferable": 1,
    },
  },
}
`;
